[package]
name = "cocors"
version = "0.1.0"
edition = "2021"
author = "hanspetersoen"
description = "Convenience & pipeline functionality for conventional commits"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive", "color", "suggestions"]}
exitcode = "1.1.2"
regex = "1"
serde = "1.0"
serde_yaml = "0.8"
coco = { path = "coco" }
coco_git = { path = "coco_git" }
log = "0.4.17"
simplelog = "0.12.0"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
